zz-out/pass14_run/zz-scripts/chapter09/plot_fig03_hist_absdphi_20_300.err
  File "/home/jplal/MCGT/zz-scripts/chapter09/plot_fig03_hist_absdphi_20_300.py", line 61
    def main():
    ^^^
SyntaxError: invalid syntax
